# nurunner-desktop-containment

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Messages.sh
src/package/: metadata.desktop
src/package/contents/config/: config.qml
src/package/contents/ui/: main.qml
usr/share/kservices5/: plasma-containment-org.kde.netrunnerdesktop.desktop
usr/share/plasma/plasmoids/org.kde.netrunnerdesktop/: metadata.desktop
usr/share/plasma/plasmoids/org.kde.netrunnerdesktop/contents/ui/: FolderItemDelegate.qml  main.qml
